# TU_BI

./: .env  .gitignore  docker-compose.yml  main.py  pyproject.toml
Assignment1/Report_Part1_Group_014/DWH1_014/data/: tb_measurementcampaign.csv
Assignment1/Report_Part1_Group_014/DWH1_014/ddl/: airq_create_dwh_014.sql  airq_create_stg_014.sql  airq_reset_dwh_014.sql  airq_reset_stg_014.sql
Assignment1/Report_Part1_Group_014/DWH1_014/etl/: a1_etl05_dim_location.sql  a1_etl07_dim_sensordevice.sql  a1_etl08_dim_city.sql  a1_etl10_ft_employee_performance.sql
Assignment1/Report_Part1_Group_014/DWH1_014/path/: sqldump_airq_dwh_014.sql
Assignment1/Report_Part1_Group_014/DWH1_014/post/: a1_check01_is_weekend.sql  a1_check04_count_dim_location.sql  a1_check06_population_comparision_dim_city.sql
Assignment1/Report_Part1_Group_014/DWH1_014/prov/: prov_airq_dwh_014.jsonld
Assignment2/Report_Part2_Group_014/DWH2_014/: AirQ_Part2_014.ipynb  group_014.txt  student_bootstrap_014.sql
DWH1_014/: AirQ_Part1_014.ipynb
DWH1_014/data/: tb_city_campaigns.csv
DWH1_014/ddl/: airq_create_ext_014.sql
DWH1_014/etl/: a1_etl01_dim_timeday.sql  a1_etl02_dim_servicetype.sql  a1_etl03_dim_parameter.sql  a1_etl04_dim_technician_role_scd2.sql  a1_etl06_dim_employee.sql  a1_etl09_ft_service_performance.sql
DWH1_014/post/: a1_check02_no_null_ft_employee_performance.sql  a1_check03_dim_employee_valid_flag.sql  a1_check05_no_null_ft_service_performance.sql
DWH1_014/prov/: prov_airq_dwh_014.jsonld
DWH1_014/sqldump/: sqldump_airq_dwh_014.sql
(+31 files in other folders)
