[project]
name = "bi-projects"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dotenv>=0.9.9",
    "ipykernel>=7.0.1",
    "jupyterlab>=4.4.10",
    "pandas>=2.3.3",
    "pip>=25.3",
    "psycopg2-binary>=2.9.11",
    "sqlalchemy>=2.0.44",
    "sqlparse>=0.5.3",
]
